# my-ws

./: pyproject.toml
src/my_ws/: __init__.py
