[project]
name = "my-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hh65", email = "hh65@sussex.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "common-utils",
    "other-project",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/common-utils", "packages/other-project"]

[tool.uv.sources]
common-utils = { workspace = true }
other-project = { workspace = true }
